--- a/styles/stylesIndex.css
+++ b/styles/stylesIndex.css
@@ -386,8 +386,8 @@ footer {
 }
 
 .carousel-slide img {
-    width: 100%;
-    height: 400px;
+    width: 400px;
+    height: auto;
     object-fit: cover; 
     display: block;
     border-radius: 8px 8px 0 0; /* Bordes superiores redondeados */
