--- a/styles/stylesIndex.css
+++ b/styles/stylesIndex.css
@@ -393,7 +393,7 @@ footer {
 
 .carousel-slide img {
     width: 100%;
-    height: auto;
+    height: 70vh;
     object-fit: cover; 
     display: block;
     border-radius: 8px 8px 0 0; /* Bordes superiores redondeados */
