--- a/styles/stylesIndex.css
+++ b/styles/stylesIndex.css
@@ -551,6 +551,11 @@ footer {
         font-size: 0.7em;
         padding: 4px 6px;
     }
+
+    .case-study,
+    .education-entry {
+        width:80%;
+    }
 }
 
 
@@ -634,6 +639,7 @@ footer {
     .case-study {
         flex-direction: column;
     }
+  
 
     .job-entry {
         align-items:center;
